# YoungSun

./: CMakeLists.txt  MANIFEST.in  README.md  setup.py
.github/workflows/: test.yaml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
YoungSun/: Spline.f90  SunFlux.f90  Youngsun.f90  __init__.py  inter1.f90  solarflux.py  youngsun.py
YoungSun/data/: composite.atl1_1_BB_append
example/: Sun_2.7Ga.txt  Sun_4.0Ga.txt  Sun_now.txt  example.py
example/.ipynb_checkpoints/: example-checkpoint.ipynb
test/: test.py
